# ptolemies

./: .env.example  .gitignore  .rules  CHANGELOG.md  CLAUDE.md  COMPLETE_NEO4J_MANUAL_COMMANDS.cypher  COMPLETE_QUERY_RESULTS.md  CONFIG.md  CONTRIBUTING.md  DATABASE_MIGRATION_SUMMARY.md  DATA_VERIFICATION_REPORT.md  DEPLOYMENT_READY.md  HOW_784_PAGES_ARE_DEFINED.md  IMPLEMENTATION_COMPLETE.md  KNOWLEDGE_BASE_COMPLETION_REPORT.md  KNOWLEDGE_GRAPH_VISUALIZATION_OPTIONS.md  LICENSE.md  MCP_DEMONSTRATION.md  MCP_SERVERS_OVERVIEW.md  PRD_outline.md  PRODUCTION_CRAWLING_COMPLETION_REPORT.md  PTOLEMIES_CURRENT_STATUS_AND_GRAPHITI_DEFICIENCIES.md  PTOLEMIES_KNOWLEDGE_GRAPH_USER_GUIDE.md  README.md  SOLUTION_COMPLETE.md  STATUS.md  STATUS_PAGE_REQUIREMENTS.md  WORKFLOW_GUIDE.md  ai_script_analyzer.py  code_documentation_gaps.md  complete_neo4j_population.py  config.sys  crawl_demo.py  crawl_log.txt  create_constraints.cypher  create_topics.cypher  enhanced_chunk_importer.py  example_usage.py  final_task_summary_20250625.md  full_knowledge_base_builder.py  (+29 more)
.claude/: settings.json  settings.local.json
.taskmaster/: README.md  generate_dependency_graph.py  generate_taskmaster_tasks.py  ptolemies_tasks.json  task_summary.md  task_summary_current.md  task_visualization_report.txt  taskmaster.config.json  taskmaster_integration.py  visualize_tasks.py
.zed/: .zcompdump  .zcompdump-Dion’s Mac Studio-5.9  .zsh_history  .zshrc  devq-info.sh  settings.json
backups/: manual_backup_20250624_002403.json
crawler/: CRAWL_STATISTICS_REPORT.md  README.md  code_documentation_summary.md  context7_documentation_tasks.json  enhanced_production_crawler.py  final_gap_filler.py  process_crawled_data.py  targeted_gap_filler.py
data/: crawl_targets.json
docs/: QUICK_START.md  (+36 more)
(+252 files in other folders)
